Swagger: generate swagger api for exiting api
