# app/handler/user_handler.go
@@ -2,7 +2,7 @@ package handler
 
 import (
 	"github.com/gofiber/fiber/v2"
-	apisv1 "github.com/imtiaz246/codera_oj/app/apis/v1"
+	apiv1 "github.com/imtiaz246/codera_oj/app/api/v1"
 	"github.com/imtiaz246/codera_oj/app/models"
 	"github.com/imtiaz246/codera_oj/utils"
 	"net/http"
@@ -24,16 +24,36 @@ func (h *Handler) GetUserByUsername(c *fiber.Ctx) error {
 		return c.Status(http.StatusNotAcceptable).JSON(utils.NewError(err))
 	}
 
-	return c.Status(http.StatusOK).JSON(apisv1.NewUserResponse(u))
+	return c.Status(http.StatusOK).JSON(apiv1.NewUserResponse(u))
 }
 
 // UpdateUser updates a user's information
+// HealthCheck godoc
+// @Summary Update a user
+// @Description Update user info
+// @Tags user
+// @Param username path string true "username"
+// @Param data body apiv1.UserUpdateRequest true "data"
+// @Accept */*
+// @Produce json
+// @Success 200 {object} map[string]interface{}
+// @Router /users/{username} [put]
 func (h *Handler) UpdateUser(c *fiber.Ctx) error {
 
 	return nil
 }
 
 // UpdatePassword changes the password for a given valid user
+// HealthCheck godoc
+// @Summary Update user password
+// @Description updates user info
+// @Tags user
+// @Param username path string true "username"
+// @Param data body apiv1.UserUpdatePasswordRequest true "data"
+// @Accept */*
+// @Produce json
+// @Success 200 {object} map[string]interface{}
+// @Router /users/{username}/password [put]
 func (h *Handler) UpdatePassword(c *fiber.Ctx) error {
 
 	return c.Status(http.StatusOK).JSON("")
